[package]
name = "tracing-analogy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tonic ="*"
prost = "*"
prost-types = "*"

[build-dependencies]
reqwest = { version = "*", features = ["blocking"] }
tonic-build = "*"