[package]
name = "tracing-analogy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = {version = "*" ,features = ["env-filter", "json"]}
tonic ="*"
prost = "*"
prost-types = "*"
tokio= {version="*",features = ["rt-multi-thread", "macros"]}
tokio-stream = "*"
gethostname ="*"
thread-id="*"

[build-dependencies]
reqwest = { version = "*", features = ["blocking"] }
tonic-build = "*"